# nifimcp_server

./: .env.example  .gitignore  README.md  commands_formatting.bash  pyproject.toml  pyrightconfig.json  run_server.py  updated_context_for_llm.txt
src/nifimcp_server/: app.py  nifi_api_client.py  nifi_models.py
src/nifimcp_server/tools/: access.py  connections.py  controller_services.py  flow.py  input_ports.py  output_ports.py  process_groups.py  processors.py
